Fri Aug 24 12:55:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.3.h:
        * ace/Process.cpp:
        * ace/Task.cpp:
          Fixes for building on vxworks 6.3 with diab 5.4 compiler

Fri Aug 24 11:17:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Size.cpp:
          Added include of OS_Memory.h to get ACE_align_binary

Thu Aug 24 21:40:24 UTC 2006  Steve Huston  <shuston@riverace.com>

        * tests/Process_Manual_Event_Test.cpp (acquire_release): Fixed a race
          condition whereby while a parent and child were ping-ponging, it
          was possible for one process to signal event1, wait on event2, then
          signal event1 again before the other process could respond to
          event1 being signaled and reset it. Thus, event1 was being reset
          after the other process signaled it, ensuring a never-ending
          wait at the end of the iterations. I changed the code to quickly
          reset the event before printing the debug message, thereby closing
          the window of opportunity a lot. But probably not completely
          removing it... we'll have to see.

Thu Aug 24 16:40:54 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Only need to set
          ACE_HAS_EXPLICIT_STATIC_TEMPLATE_MEMBER_INSTANTIATION for g++
          prior to g++ 4.1 (have only heard report of this for g++ 4.1;
          it may need adjustment for 4.0). Thanks to Nzer Zaidenberg
          <scipioenterprises at yahoo dot com> for reporting the original
          problem and testing this fix.

        * THANKS: Added Nzer Zaidenberg to the Hall of Fame.

Thu Aug 24 16:33:22 UTC 2006  James H. Hill     <hillj@isis.vanderbilt.edu>

        * docs/svn/config:
        * docs/svn/svn-prefs.reg:

          Added auto-props for *.tex and *.cls files.

Thu Aug 24 13:48:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-openvms.h